--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  //background-color: lightpink;
+  background-image: url(http://www.transparenttextures.com/patterns/textured-paper.png);
 }
 
 code {
